Update source code.
- Added missing XMPP tags.
- Full implement SASL tags.
- Added simple id generator class for construct stanzas with IDs.
- Renamed `XmppEnumMemberAttribute` to `XmppMemberAttribute` to match with objective of this attribute and be "open" to use in another scenarios.
- Restore JID record behavior (init-only properties)

--- a/Jabber.Api/Jabber.Api.csproj
+++ b/Jabber.Api/Jabber.Api.csproj
@@ -7,4 +7,8 @@
 		<RootNamespace>Jabber</RootNamespace>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Folder Include="Protocol\Features\" />
+	</ItemGroup>
+
 </Project>
