Add buildspec to publish nuget package.
- Also split Item from dataform in separated file.

--- a/Jabber.Api/Jabber.Api.csproj
+++ b/Jabber.Api/Jabber.Api.csproj
@@ -8,7 +8,49 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Folder Include="Protocol\Extensions\XEP0077\" />
 	  <Folder Include="Protocol\Features\" />
 	</ItemGroup>
+
+	<PropertyGroup>
+		<Version>1.0.0</Version>
+		<Copyright>nathan130200</Copyright>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/nathan130200/JabberNet</RepositoryUrl>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>Jabber.Api</PackageId>
+		<PackageVersion>$(Version)</PackageVersion>
+		<PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
+		<PackageTags>xml, xmpp, jabber, xmpp-client, xmpp-server, xmpp-component</PackageTags>
+		<PackageOutputPath>$(SolutionDir)Packages/</PackageOutputPath>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<EmbedUntrackedSources>false</EmbedUntrackedSources>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="$(SolutionDir)README.md">
+			<Pack>true</Pack>
+			<PackagePath>/</PackagePath>
+			<Visible>false</Visible>
+		</None>
+
+		<None Include="$(SolutionDir)LICENSE">
+			<Pack>true</Pack>
+			<PackagePath>/</PackagePath>
+			<Visible>false</Visible>
+		</None>
+	</ItemGroup>
+
+
 
 </Project>
